--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-  "ownerNumber": ["6285791458996@s.whatsapp.net"],
-  "ownerName": ["Riy"],
+  "ownerNumber": ["62085851393739@s.whatsapp.net"],
+  "ownerName": ["jacky"],
   "botName": "Hinata Hyuga Bot",
-  "youtubeOwner": "https://youtube.com/c/Riy",
-  "donasiDana": "081575886399",
-  "donasiGopay": "081575886399",
+  "youtubeOwner": "https://youtube.com/c/ind",
+  "donasiDana": "089506219231",
+  "donasiGopay": "089506219231",
   "sessionName": "session",
   "pathimg": "./media/hinata.jpg",
   "gamewaktu": 90,
