--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-  "ownerNumber": ["6285791458996@s.whatsapp.net"],
-  "ownerName": ["Riy"],
+  "ownerNumber": ["6288210072756@s.whatsapp.net"],
+  "ownerName": ["Luxxy"],
   "botName": "Hinata Hyuga Bot",
-  "youtubeOwner": "https://youtube.com/c/Riy",
-  "donasiDana": "081575886399",
-  "donasiGopay": "081575886399",
+  "youtubeOwner": "https://youtube.com/channel/UCiSGDemNP2HrpnA6eQo5ETg",
+  "donasiDana": "088210072756",
+  "donasiGopay": "088210072756",
   "sessionName": "session",
   "pathimg": "./media/hinata.jpg",
   "gamewaktu": 90,
