--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "ownerNumber": ["6285791458996@s.whatsapp.net"],
-  "ownerName": ["Riy"],
-  "botName": "Hinata Hyuga Bot",
+  "ownerNumber": ["6282124371800@s.whatsapp.net"],
+  "ownerName": ["apip"],
+  "botName": "fi-chan",
   "youtubeOwner": "https://youtube.com/c/Riy",
   "donasiDana": "081575886399",
   "donasiGopay": "081575886399",
