--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-  "ownerNumber": ["6285791458996@s.whatsapp.net"],
-  "ownerName": ["Riy"],
-  "botName": "Hinata Hyuga Bot",
-  "youtubeOwner": "https://youtube.com/c/Riy",
-  "donasiDana": "081575886399",
+  "ownerNumber": ["6285760165634@s.whatsapp.net"],
+  "ownerName": ["Vanzz"],
+  "botName": "VBOT",
+  "youtubeOwner": "https://youtube.com/c/VanzzXYT",
+  "donasiDana": "082235537809",
   "donasiGopay": "081575886399",
   "sessionName": "session",
   "pathimg": "./media/hinata.jpg",
