--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "riy04",
   "license": "MIT",
   "dependencies": {
-    "@adiwajshing/baileys": "github:adiwajshing/baileys",
+    "@adiwajshing/baileys": "4.3.0",
     "@adiwajshing/keyed-db": "^0.2.4",
     "awesome-phonenumber": "^2.64.0",
     "qrcode-terminal": "^0.12.0",
