--- a/config.json
+++ b/config.json
@@ -1,23 +1,23 @@
 {
-"ownerNumber": ["6281575886399@s.whatsapp.net"],
-"ownerName": ["Riy"],
-"botName": "Hinata-Md",
-"packname": "Hinata-Md",
-"author": "© Riy04",
+"ownerNumber": ["6282171432358@s.whatsapp.net"],
+"ownerName": ["Alex"],
+"botName": "MEGABOT",
+"packname": "Sticker By",
+"author": "© Alex",
 "sessionName": "session",
 "pathimg": "./media/hinata.jpg",
 
 "medsos": {
-"youtube": "https://youtube.com/c/Riy04",
-"instagram": "https://instagram.com/riychdwayne"
+"youtube": "https://youtube.com/channel/UCbI74T0AXUI26VC88NyoWdw",
+"instagram": "https://instagram.com/al_pakel"
 },
 
 "donasi": {
 "saweria": "https://saweria.co/Riy20",
-"dana": "081575886399",
-"AN_dana": "Riy 04",
-"gopay": "081575886399",
-"AN_gopay": "Riy 04"
+"dana": "081287142545",
+"AN_dana": "Alex Pakel",
+"gopay": "xxxxxxxxxxx",
+"AN_gopay": "--"
 },
 
 "gamewaktu": 90,
