--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-"ownerNumber": ["6281575886399@s.whatsapp.net"],
-"ownerName": ["Riy"],
+"ownerNumber": ["6285268904248@s.whatsapp.net"],
+"ownerName": ["YTTA"],
 "botName": "Hinata-Md",
 "packname": "Hinata-Md",
 "author": "© Riy04",
