--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-"ownerNumber": ["6281575886399@s.whatsapp.net"],
-"ownerName": ["Riy"],
+"ownerNumber": ["6285694931830@s.whatsapp.net"],
+"ownerName": ["Amiaja"],
 "botName": "Hinata-Md",
 "packname": "Hinata-Md",
-"author": "© Riy04",
+"author": "© Ami06",
 "sessionName": "session",
 "pathimg": "./media/hinata.jpg",
 
