--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-"ownerNumber": ["6281575886399@s.whatsapp.net"],
-"ownerName": ["Riy"],
+"ownerNumber": ["6283171691334@s.whatsapp.net"],
+"ownerName": ["Guh"],
 "botName": "Hinata-Md",
 "packname": "Hinata-Md",
-"author": "© Riy04",
+"author": "© GuhXD",
 "sessionName": "session",
 "pathimg": "./media/hinata.jpg",
 
@@ -14,10 +14,10 @@
 
 "donasi": {
 "saweria": "https://saweria.co/Riy20",
-"dana": "081575886399",
-"AN_dana": "Riy 04",
-"gopay": "081575886399",
-"AN_gopay": "Riy 04"
+"dana": "083851126372",
+"AN_dana": "GuhXD48",
+"gopay": "083851126372",
+"AN_gopay": "No Name"
 },
 
 "gamewaktu": 90,
