--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hinata-md",
+  "name": "Hanz-md",
   "version": "0.0.5",
   "description": "Simple whatsapp bot with multi device.",
   "main": "main.js",
@@ -10,7 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "author": "riy04",
+  "author": "Seril",
   "license": "MIT",
   "dependencies": {
     "@adiwajshing/baileys": "github:riy04/baileys",
