--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
-    "ownerNumber": "6281575886399@s.whatsapp.net",
-    "ownerName": "Riy 04",
-    "botName": "Hinata-Md",
-    "footer": "Xcode Team",
+    "ownerNumber": "6288223674569@s.whatsapp.net",
+    "ownerName": "NainnOfc",
+    "botName": "MeldaaBotz",
+    "footer": "Mell-Team",
     "sessionName": "session",
     "pathimg": "./media/hinata.jpg",
     "lolkey": "Beli Sendiri",
-    "youtube": "https://youtube.com/c/Riy04",
-    "instagram": "https://instagram.com/riychdwayne",
+    "youtube": "https://youtube.com/c/DikaaOfc",
+    "instagram": "https://instagram.com/Cigegerotak",
     "gamewaktu": 90,
     "limitCount": 25,
     "gcount": {
@@ -15,7 +15,7 @@
         "user": 15
     },
     "sticker": {
-        "packname": "Hinata-Md",
-        "author": "By Riy 04"
+        "packname": "Meldaa-MD",
+        "author": "By NainnOfc"
     }
 }
