--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
-    "ownerNumber": "6281575886399@s.whatsapp.net",
-    "ownerName": "Riy 04",
-    "botName": "Hinata-Md",
+    "ownerNumber": "6282258255356@s.whatsapp.net",
+    "ownerName": "-",
+    "botName": "AinXDV2",
     "footer": "Xcode Team",
     "sessionName": "session",
-    "pathimg": "./media/hinata.jpg",
+    "pathimg": "./media/Haruka.jpg",
     "lolkey": "Beli Sendiri",
-    "youtube": "https://youtube.com/c/Riy04",
-    "instagram": "https://instagram.com/riychdwayne",
+    "youtube": "https://youtube.com",
+    "instagram": "https://instagram.com/aiinuddin",
     "gamewaktu": 90,
     "limitCount": 25,
     "gcount": {
@@ -15,7 +15,7 @@
         "user": 15
     },
     "sticker": {
-        "packname": "Hinata-Md",
-        "author": "By Riy 04"
+        "packname": "AinXDV2",
+        "author": "02"
     }
 }
