--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
     "footer": "Xcode Team",
     "sessionName": "session",
     "pathimg": "./media/Haruka.jpg",
-    "lolkey": "Beli Sendiri",
+    "lolkey": "EQacwVnD",
     "youtube": "https://youtube.com",
     "instagram": "https://instagram.com/aiinuddin",
     "gamewaktu": 90,
