--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
     "botName": "AinXDV2",
     "footer": "Xcode Team",
     "sessionName": "session",
-    "pathimg": "./media/Haruka.jpg",
+    "pathimg": "./media/hinata.jpg",
     "lolkey": "EQacwVnD",
     "youtube": "https://youtube.com",
     "instagram": "https://instagram.com/aiinuddin",
