--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "ownerNumber": "6281575886399@s.whatsapp.net",
-    "ownerName": "Riy 04",
+    "ownerNumber": "628979627023@s.whatsapp.net",
+    "ownerName": "ObamaKntl",
     "botName": "Hinata-Md",
     "footer": "Xcode Team",
     "sessionName": "session",
