--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
-    "ownerNumber": "6281575886399@s.whatsapp.net",
-    "ownerName": "Riy 04",
-    "botName": "Hinata-Md",
+    "ownerNumber": "6282115622493@s.whatsapp.net",
+    "ownerName": "FEBRI",
+    "botName": "FEBRI FX BOTZ",
     "footer": "Xcode Team",
     "sessionName": "session",
     "pathimg": "./media/hinata.jpg",
     "lolkey": "Beli Sendiri",
-    "youtube": "https://youtube.com/c/Riy04",
-    "instagram": "https://instagram.com/riychdwayne",
+    "youtube": "https://www.youtube.com/channel/UCE0bGvREwDK5hAOmRV9KfUg",
+    "instagram": "https://instagram.com/febrifx21",
     "gamewaktu": 90,
     "limitCount": 25,
     "gcount": {
@@ -15,7 +15,7 @@
         "user": 15
     },
     "sticker": {
-        "packname": "Hinata-Md",
-        "author": "By Riy 04"
+        "packname": "febri fx",
+        "author": "botz"
     }
 }
