--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
-    "ownerNumber": "6281575886399@s.whatsapp.net",
-    "ownerName": "Riy 04",
+    "ownerNumber": "6288980446383@s.whatsapp.net",
+    "ownerName": "Xorn",
     "botName": "Hinata-Md",
     "footer": "Xcode Team",
     "sessionName": "session",
     "pathimg": "./media/hinata.jpg",
     "lolkey": "Beli Sendiri",
-    "youtube": "https://youtube.com/c/Riy04",
-    "instagram": "https://instagram.com/riychdwayne",
+    "youtube": "-",
+    "instagram": "https://instagram.com/gnh.ajaaaaa",
     "gamewaktu": 90,
     "limitCount": 25,
     "gcount": {
@@ -16,6 +16,6 @@
     },
     "sticker": {
         "packname": "Hinata-Md",
-        "author": "By Riy 04"
+        "author": "By Xorn 76"
     }
 }
