--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
     "ownerNumber": "6281575886399@s.whatsapp.net",
-    "ownerName": "Riy 04",
-    "botName": "Hinata-Md",
-    "footer": "Xcode Team",
+    "ownerName": "Nanat Store",
+    "botName": "Nanat-Md",
+    "footer": "nanatt",
     "sessionName": "session",
     "pathimg": "./media/hinata.jpg",
     "lolkey": "Beli Sendiri",
     "youtube": "https://youtube.com/c/Riy04",
-    "instagram": "https://instagram.com/riychdwayne",
+    "instagram": "https://instagram.com/nndylst_",
     "gamewaktu": 90,
     "limitCount": 25,
     "gcount": {
@@ -15,7 +15,7 @@
         "user": 15
     },
     "sticker": {
-        "packname": "Hinata-Md",
-        "author": "By Riy 04"
+        "packname": "Nanat-Md",
+        "author": "By nanat"
     }
 }
