--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
-    "ownerNumber": "6281575886399@s.whatsapp.net",
+    "ownerNumber": "6281383092185@s.whatsapp.net",
     "ownerName": "Riy 04",
-    "botName": "Hinata-Md",
+    "botName": "Zodiac-Aries",
     "footer": "Xcode Team",
     "sessionName": "session",
     "pathimg": "./media/hinata.jpg",
     "lolkey": "Beli Sendiri",
-    "youtube": "https://youtube.com/c/Riy04",
-    "instagram": "https://instagram.com/riychdwayne",
+    "TikTok": "tiktok.com/@ariespermanaaa",
+    "instagram": "https://instagram.com/arisjagoanmama?igshid=YmMyMTA2M2Y=",
     "gamewaktu": 90,
     "limitCount": 25,
     "gcount": {
@@ -15,7 +15,7 @@
         "user": 15
     },
     "sticker": {
-        "packname": "Hinata-Md",
-        "author": "By Riy 04"
+        "packname": "Zodiac-Aries",
+        "author": "Aries/Aris"
     }
 }
