--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "ownerNumber": "6281383092185@s.whatsapp.net",
-    "ownerName": "Riy 04",
+    "ownerName": "Aries 14",
     "botName": "Zodiac-Aries",
     "footer": "Xcode Team",
     "sessionName": "session",
