--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "ownerNumber": "6281575886399@s.whatsapp.net",
-    "ownerName": "Riy 04",
-    "botName": "Hinata-Md",
+    "ownerNumber": "6282293786539@s.whatsapp.net",
+    "ownerName": "Wilka 04",
+    "botName": "Wilka-Md",
     "footer": "Xcode Team",
     "sessionName": "session",
     "pathimg": "./media/hinata.jpg",
