--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 {
-    "ownerNumber": "6281575886399@s.whatsapp.net",
-    "ownerName": "Riy 04",
-    "botName": "Hinata-Md",
+    "ownerNumber": "6288980303928@s.whatsapp.net",
+    "ownerName": "Roy Senpai",
+    "botName": "Hinata BOTZ",
     "footer": "Xcode Team",
     "sessionName": "session",
     "pathimg": "./media/hinata.jpg",
     "lolkey": "Beli Sendiri",
-    "youtube": "https://youtube.com/c/Riy04",
+    "youtube": "https://youtube.com/channel/UCm8yDv5ERW_OyiwFPni6vAg",
     "instagram": "https://instagram.com/riychdwayne",
     "gamewaktu": 90,
     "limitCount": 25,
@@ -15,7 +15,7 @@
         "user": 15
     },
     "sticker": {
-        "packname": "Hinata-Md",
-        "author": "By Riy 04"
+        "packname": "Hinata BOTZ",
+        "author": "By Roy Senpai"
     }
 }
