--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "ownerNumber": "6281575886399@s.whatsapp.net",
-    "ownerName": "Riy 04",
+    "ownerNumber": "6283197493597@s.whatsapp.net",
+    "ownerName": "Relzz 04",
     "botName": "Hinata-Md",
     "footer": "Xcode Team",
     "sessionName": "session",
@@ -16,6 +16,6 @@
     },
     "sticker": {
         "packname": "Hinata-Md",
-        "author": "By Riy 04"
+        "author": "By Relzz 04"
     }
 }
