--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "ownerNumber": "6281575886399@s.whatsapp.net",
-    "ownerName": "Riy 04",
+    "ownerNumber": "623197493597@s.whatsapp.net",
+    "ownerName": "Relzz store",
     "botName": "Hinata-Md",
     "footer": "Xcode Team",
     "sessionName": "session",
