--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "ownerNumber": "6281575886399@s.whatsapp.net",
-    "ownerName": "Riy 04",
-    "botName": "Hinata-Md",
+    "ownerNumber": "6281210412176",
+    "ownerName": "Wisnu",
+    "botName": "WisBotz-Md",
     "footer": "Xcode Team",
     "sessionName": "session",
     "pathimg": "./media/hinata.jpg",
@@ -15,7 +15,7 @@
         "user": 15
     },
     "sticker": {
-        "packname": "Hinata-Md",
+        "packname": "WisBotz-Md",
         "author": "By Riy 04"
     }
 }
