--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
-    "ownerNumber": "6281575886399@s.whatsapp.net",
-    "ownerName": "Riy 04",
-    "botName": "Hinata-Md",
+    "ownerNumber": "6285706318022@s.whatsapp.net",
+    "ownerName": " Vatamorgana",
+    "botName": "Hinata-Bot",
     "footer": "Xcode Team",
     "sessionName": "session",
     "pathimg": "./media/hinata.jpg",
     "lolkey": "Beli Sendiri",
-    "youtube": "https://youtube.com/c/Riy04",
-    "instagram": "https://instagram.com/riychdwayne",
+    "youtube": "https://youtube.com/@riyangaming8306",
+    "instagram": "https://instagram.com/riyan_vatamorgana",
     "gamewaktu": 90,
     "limitCount": 25,
     "gcount": {
