--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
-    "ownerNumber": "6281575886399@s.whatsapp.net",
-    "ownerName": "Riy 04",
-    "botName": "Hinata-Md",
+    "ownerNumber": "6283822270848@s.whatsapp.net",
+    "ownerName": "Bima",
+    "botName": "Quanxi-Md",
     "footer": "Xcode Team",
     "sessionName": "session",
     "pathimg": "./media/hinata.jpg",
-    "lolkey": "Beli Sendiri",
+    "lolkey": "yPkuRAts",
     "youtube": "https://youtube.com/c/Riy04",
     "instagram": "https://instagram.com/riychdwayne",
     "gamewaktu": 90,
@@ -15,7 +15,7 @@
         "user": 15
     },
     "sticker": {
-        "packname": "Hinata-Md",
-        "author": "By Riy 04"
+        "packname": "Quanxi-Md",
+        "author": "By Bima 04"
     }
 }
