--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "ownerNumber": "6281575886399@s.whatsapp.net",
-    "ownerName": "Riy 04",
+    "ownerNumber": "6285817433055@s.whatsapp.net",
+    "ownerName": "Mewa Riss",
     "botName": "Hinata-Md",
     "footer": "Xcode Team",
     "sessionName": "session",
@@ -8,14 +8,14 @@
     "lolkey": "Beli Sendiri",
     "youtube": "https://youtube.com/c/Riy04",
     "instagram": "https://instagram.com/riychdwayne",
-    "gamewaktu": 90,
-    "limitCount": 25,
+    "gamewaktu": 30,
+    "limitCount": 99999999,
     "gcount": {
         "prem": 35,
         "user": 15
     },
     "sticker": {
         "packname": "Hinata-Md",
-        "author": "By Riy 04"
+        "author": "By Riss"
     }
 }
